[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luminos-stage"
version = "0.1.0"
description = "Python interface for controlling Luminos motorised 6-axis stage via Zaber motion control"
readme = "README.md"
authors = [{name = "bongkokwei", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "zaber-motion>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0"
]
gui = [
    "PyQt5>=5.15.0",
    "numpy>=1.20.0"
]

[project.urls]
Homepage = "https://github.com/bongkokwei/luminos-stage"
Repository = "https://github.com/bongkokwei/luminos-stage"

[tool.setuptools.packages.find]
where = ["src"]
